<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        app:showAsAction="ifRoom"
        android:title="@string/about"
        android:icon="@drawable/acc">
    </item>

    <item
        android:id="@+id/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView">
    </item>

    <item
        android:id="@+id/Terms"
        android:title="@string/terms_conditions"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/setting"
        android:title="@string/settings"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never">

    </item>

</menu>