<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/ivHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:padding="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/note8pro_hijau" />

        <TextView
            android:id="@+id/NamaHP"
            style="@style/TextContent.Subtitle"
            android:text="@string/NameHP"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivHP"
            app:layout_constraintStart_toStartOf="@+id/ivHP"
            app:layout_constraintTop_toBottomOf="@+id/ivHP" />

        <TextView
            android:id="@+id/DeskripsiHP"
            style="@style/TextContent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/Deskripsi"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/spek"
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/spesifikasi" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/display"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/DisplayHP"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_display"
                    android:textAlignment="textStart"
                    android:gravity="start" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/size"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/SizeHP"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_size" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/battery"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/BatteryHP"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_battery" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/HargaHP"
            style="@style/TextContent.Black"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/Harga"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_follow"
            style="@style/ButtonGeneral"
            android:background="@drawable/shape"
            android:text="@string/follow_me" />
    </ScrollView>


</ScrollView>