<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".AboutActivity"
    tools:ignore="Overdraw">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/btk"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                app:civ_border_color="@color/cardview_dark_background"
                app:civ_border_width="3sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/prf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bilbo_swash_caps"
                android:text="@string/fahmi_rinaldi"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="40dp">

            <ImageView
                android:id="@+id/mail"
                android:layout_width="40dp"
                android:layout_height="39dp"
                android:src="@drawable/ic_email_black_24dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:paddingStart="25dp"
                android:textColor="@color/colorwhite"
                android:text="@string/fahmi3012_gmail_com"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:paddingStart="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/phone"
                android:layout_width="40dp"
                android:layout_height="39dp"
                android:src="@drawable/ic_walogo"/>
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:textColor="@color/colorwhite"
                android:text="@string/_62_8979023149"
                android:fontFamily="casual"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:paddingStart="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/school"
                android:layout_width="40dp"
                android:layout_height="39dp"
                android:src="@drawable/ic_school_black_24dp"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:textColor="@color/colorwhite"
                android:text="SMK DEWANTARA"
                android:fontFamily="casual"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/maps"
                android:layout_width="40dp"
                android:layout_height="39dp"
                android:src="@drawable/ic_location_city_black_24dp"/>
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:textColor="@color/colorwhite"
                android:text="@string/alamat"
                android:fontFamily="casual"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:textColor="@color/colorwhite"
        android:text="@string/teknik_komputer_jaringan"
        android:fontFamily="casual"
        android:textStyle="bold"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:text="@string/_2017_2020"
        android:textColor="@color/colorwhite"
        android:fontFamily="casual"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttongrd"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:fontFamily="serif"
            android:text="@string/follow_me"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>